# QT_06

./: .gitignore
QT_06/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
